--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -24,6 +24,19 @@ dependencies:
   flutter:
     sdk: flutter
 
+  # l10n
+  intl: ^0.16.1
+  # Provider関連
+  provider: ^4.3.2+3
+  state_notifier: ^0.6.0
+  flutter_state_notifier: ^0.6.1
+  # freezed関連
+  freezed_annotation: ^0.12.0
+  # Shared Preference
+  shared_preferences: ^0.5.12+4
+
+  # 画像のキャッシュ
+  cached_network_image: ^2.4.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -33,12 +46,18 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  # 静的解析強化
+  pedantic_mono: ^1.10.0+3
+  # freezed関連
+  freezed: ^0.12.5
+  build_runner: ^1.10.9
+  json_serializable: ^3.5.1
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
